api,is: Add initial user to CreateTenantRequest
